# hypatia

./: .gitignore  .gitmodules  cubicsat_run.sh  hypatia_install_dependencies.sh
ns3-sat-sim/: .gitignore  build.sh  rebuild.sh
ns3-sat-sim/simulator/contrib/: .gitignore
ns3-sat-sim/simulator/contrib/basic-sim/: CMakeLists.txt
ns3-sat-sim/simulator/contrib/basic-sim/helper/core/: point-to-point-ab-helper.cc
ns3-sat-sim/simulator/contrib/satellite-network/: CMakeLists.txt
ns3-sat-sim/simulator/contrib/satellite-network/helper/: arbiter-single-forward-helper.cc  gsl-helper.cc  point-to-point-laser-helper.cc
ns3-sat-sim/simulator/contrib/satellite-network/model/: gsl-channel.cc  gsl-channel.h  gsl-net-device.cc  gsl-net-device.h  point-to-point-laser-channel.cc  point-to-point-laser-net-device.cc  point-to-point-laser-net-device.h
ns3-sat-sim/simulator/contrib/satellite-network/test/: end-to-end-special-test.h
ns3-sat-sim/simulator/scratch/main_satnet/: main_satnet.cc
ns3-sat-sim/simulator/src/satellite/: CMakeLists.txt
ns3-sat-sim/simulator/src/satellite/model/data/: cgen  constants-gen.cc
paper/: custom_experiment.sh
paper/ns3_experiments/custom_experiment/: step_1_generate_runs.py  step_2_run.py  step_3_generate_plots.py
paper/ns3_experiments/custom_experiment/templates/: template_config_ns3.properties
paper/satgenpy_analysis/: custom_analysis.py
satviz/: cesium_run.sh
satviz/scripts/: custom_visualize_path.py
satviz/static_html/: bottom.html  top.html
satviz/viz_output/: cesium_run.sh
(+7 files in other folders)
